--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,47 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hahoan.royal_music">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-
-      >
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.SEARCH"></action>
             </intent-filter>
+            <meta-data
+                android:name="android.app.seachable"
+                android:resource="@xml/searchable"></meta-data>
         </activity>
-        <activity android:name=".HistoryActivity"></activity>
-        <activity android:name=".PlayingAcitivity"></activity>
+        <activity
+            android:name=".HistoryActivity"
+            android:theme="@style/Theme.AppCompat.CompactMenu">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"></action>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.seachable"
+                android:resource="@xml/searchable"></meta-data>
+        </activity>
+        <activity android:name=".PlayingActivity"></activity>
         <activity android:name=".RankingActivity"></activity>
-        <activity android:name=".SearchingActivity"></activity>
+        <activity android:name=".SearchingActivity"
+            android:theme="@style/Theme.AppCompat.CompactMenu">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"></action>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.seachable"
+                android:resource="@xml/searchable"></meta-data>
+        </activity>
         <activity android:name=".PlayListActivity"></activity>
     </application>
 
