--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,36 +14,20 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                <action android:name="android.intent.action.SEARCH"></action>
             </intent-filter>
-            <meta-data
-                android:name="android.app.seachable"
-                android:resource="@xml/searchable"></meta-data>
         </activity>
-        <activity
-            android:name=".HistoryActivity"
-            android:theme="@style/Theme.AppCompat.CompactMenu">
+        <activity android:name=".HistoryActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"></action>
-            </intent-filter>
-            <meta-data
-                android:name="android.app.seachable"
-                android:resource="@xml/searchable"></meta-data>
         </activity>
         <activity android:name=".PlayingActivity"></activity>
         <activity android:name=".RankingActivity"></activity>
-        <activity android:name=".SearchingActivity"
-            android:theme="@style/Theme.AppCompat.CompactMenu">
-
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"></action>
-            </intent-filter>
-            <meta-data
-                android:name="android.app.seachable"
-                android:resource="@xml/searchable"></meta-data>
-        </activity>
+        <activity android:name=".SearchingActivity"></activity>
         <activity android:name=".PlayListActivity"></activity>
+        <activity android:name=".RankingDetailActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".RankingActivity"></meta-data>
+        </activity>
+
     </application>
 
 </manifest>
